allowed host update

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -148,35 +148,16 @@ nav {
   margin-left: auto;
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
-  .container .first, .second, .third {
-    flex-direction:column;
-    height: 200px;
-    border-radius: 30px;
-    box-shadow: 0 8px 8px rgba(170, 116, 116, 0.05), 0 12px 12px rgba(0, 0, 0, 0.02);
-  }
-
-
-  .container-menu a .sale .sale-image {
-    /*border: 1px solid green;*/
-    width: 180px;
-    margin: 0;
-    align-self: flex-end;
-    margin-left: auto;
-  }
-}
-
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   body {
     margin: 0;
   }
 
-  header img {
-    margin-left: 185px;
-  }
-  header h2 {
+  header{
     text-align: center;
-    font-weight: bold;
+  }
+
+  header h2 {
     margin-top: -30px;
   }
 
@@ -212,11 +193,10 @@ nav {
 
 
   .container-menu {
-    /* border: 1px solid green; */
     width: 100%;
     position: absolute; /* 절대 위치 설정 */
     padding: 0; /* 왼쪽 여백을 없애고, 상하 여백을 유지 */
-    top: 30%;
+    top: 50%;
   }
 
   .container-menu .first, .second, .third {
